fix(PhotoDetails): improve EXIF section layout and styling for better readability

--- a/src/styles/photoDetails.css
+++ b/src/styles/photoDetails.css
@@ -8,7 +8,7 @@
     width: fit-content;
     height: fit-content;
     background-color: rgba(0, 0, 0, 0.267);
-    padding: 20px 20px 20px 60px;                                                                                                                                                              
+    padding: 20px 20px 20px 100px;
     border-radius: 0px 5px 5px 0px;
 }
 
@@ -22,23 +22,29 @@
 }
 
 .exif {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 50px;
     font-family: "Quicksand", system-ui;
+    margin-top: 20px;
+    margin-left: 50px;
 }
 
 .exif .camera-settings-map {
     display: flex;
-    gap: 40px;
+    justify-content: flex-start;
+    gap: 50px;
 }
 
-.exif .camera-settings-map
-.camera-settings {
-    margin-top: auto;
-    margin-bottom: auto;
+.exif .camera-settings-map .exif-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
-.exif .camera-settings-map
-.camera-settings .place-date {
-    margin-bottom: 10px;
+.margin-bottom {
+    margin-bottom: 5px;
 }
 
 .exif-symbol-group {
@@ -90,5 +96,9 @@
 }
 
 .tags-collection {
+    display: flex;
+    flex-wrap: wrap;
+    /* margin-top: 50px; */
     padding: 5px;
+    width: 80%;
 }
